-Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
-Allow to download a 512 MB TBBlue SD official card (allowed download sizes: 32MB, 128MB, 512MB, 2 GB)
-Allow paths with backslashes on esxdos handler

Improved debugging:
-Added breakpoint action "reset-tstatp"
-Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages
-Added key to execute a RET 

Improved Chloe emulation: 
-Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
-Load unodos3.rom as the default divmmc firmware
-Added chloehd.mmc in the extras package

Improved emulation: use a slightly less cpu on every scanline


Fixed ZRCP bugs:
-Fix possible crash when disconnecting socket
-Using cpu-history ZRCP command no longer fires additional MRA conditions

Fixed Esxdos handler: 
-Fixed segfaults when using a file handler that was a directory

Fixed rom loading: no more cpu panic when the rom is not found
Fixed SCF/CCF undocumented flags emulation. Not enabled by default on compilation because almost no one is using this
Fixed saving "Show CPU usage" setting on footer
Fixed using tab and backspace keys in curses driver
Fixed segfaults when using some memory zones and changing machine
Fixed segfaults when setting breakpoints from config file and machine is QL
Fixed loading zsf snapshot and ay registers
Fixed segfaults when changing machines and resizing windows

Fixed tbblue bugs:
-Fixed 8 first lines of tiles on border not shown
-Fixed text mode (1 bit tile)
-Fixed reading palette colours. Fixed returning from multiface nmi 
-Fixed reading clipping values
-Fixed screensaver
-Fixed tbblue memory priorities
-Fixed tbblue diviface - mmu priority
-Fixed layer2 mode 2 scroll


Version 8.1.1 - The Great Escape edition. 2 March 2020

Fixed starting the emulator on some Mac OS versions


Version 8.1 - The Great Escape edition. 25 February 2020


Added ZEsarUX Network Gaming protocol (ZENG), which allows you to play to any emulated game, using two ZEsarUX instances, 