@@ -8,6 +8,9 @@ http://www.simcoupe.org
 Copyright Philip Kendall and other authors. Distributed under GNU GENERAL PUBLIC LICENSE v2, you may read it on the LICENSE_fuse file
 http://fuse-emulator.sourceforge.net
 
+-Hilow
+Copyright 1985 Juan J. Arias, Carlos Galucci, Roberto Eimer, Ramiro Arias, Alfredo Mussio
+
 -mdvtool
 Copyright 2005 Till Harbaum. Distributed under GNU GENERAL PUBLIC LICENSE v3, you may read it on the LICENSE_mdvtool file
 https://github.com/mist-devel/mist-binaries/tree/master/cores/ql/tools/mdvtool
