@@ -368,3 +368,5 @@ Probado con curl y no parece funcionar
 -vdp 9918: bit magnification x2 no se hace caso . juegos que se usen: bank panic (sg1000) en titulo inicial
 
 -extension sc en algunos juegos sg1000?
+
+-tecla para poder cerrar todos los menus y volver a emulacion (como F5+ESC). Desaparecen las ventanas en background pero no las cierra realmente
