@@ -56,6 +56,7 @@ Improved TBBlue emulation:
 Improved debugging:
 -Added breakpoint action "reset-tstatp"
 -Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages
+-Added IN() function to read a port in the breakpoint parser
 -Added key to execute a RET 
 
 Improved Chloe emulation: 
